Fixes for configuration and docker execution